--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "project_planner",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://gazjosef.github.io/project-planner",
   "dependencies": {
     "gh-pages": "^2.2.0",
     "moment": "^2.24.0",
@@ -12,6 +13,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
