--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gh-pages": "^2.2.0",
     "moment": "^2.24.0",
     "react": "^16.9.0",
+    "react-chartjs": "^1.2.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.1"
