--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "homepage": "https://gazjosef.github.io/project_planner",
   "dependencies": {
     "chart.js": "^2.9.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.2",
     "gh-pages": "^2.2.0",
     "moment": "^2.24.0",
     "react": "^16.9.0",
     "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.9.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.3.1"
+    "react-scripts": "^3.3.1",
+    "react-test-renderer": "^16.13.1"
   },
   "scripts": {
     "start": "react-scripts start",
